Fixing breaking issue on safari

--- a/app/assets/stylesheets/avg.css.sass
+++ b/app/assets/stylesheets/avg.css.sass
@@ -315,9 +315,9 @@ h2
       .pre
         left: 0
         right: 0
-        color: $darkgray
-        position: absolute
-        top: 8px
+        border-bottom: 1px solid #9e9e9e
+        margin-bottom: 8px
+        padding-bottom: 8px
         text-transform: uppercase
         font-size: 14px
         font-weight: bold
